# gmanim-editor

./: .gitignore  Cargo.toml
examples/: test_incremental.py
src/: ipc.rs  main.rs
