[package]
name = "gmanim-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.3"
egui = "0.34.3"
interprocess = "2.4.2"
nalgebra = "0.35.0"
notify = "6.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shared_memory = "0.12.4"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
